@startuml Mecalux

allowmixing
skinparam linetype ortho

namespace Backend {

' === COMMON KERNEL (Used by ALL Layers) ===
namespace Backend.Common {
    
    class SystemConstants <<Static>> {
        ' Timing
        + {static} const int ORCA_TICK_MS = 50
        + {static} const int OBSTACLE_UPDATE_TICK_MS = 100
    }

    class Coordinates {
        - int x
        - int y
        
        + Coordinates(x: int, y: int)
        + getCoordinates(): Coordinates
        + DistanceTo(other: Coordinates): float
    }

    enum Resolution {
        METERS
        DECIMETERS
        CENTIMETERS
        MILLIMETERS
    }
}

    namespace Layer1 {

        package Input <<Node>> {
            artifact "map_layout.txt" as MapFile


            
            class Static_BitMap {
                - int height
                - int width
                - Resolution res
                
                + LoadFromFile(path: String): void
                + IsAccessible(pair<int, int> coordinates): bool
                + GetDimensions(): pair<int, int>
            }

        }
        
        package Core <<Rectangle>> {
            class NavMeshGenerator {

            }

            class DynamicObstacle {
                - Coordinates top_left_anchor                
                - int total_duration_ms
                - int remaining_time_ms
                - int size
                
                + GetOccupiedCells(): List<Coordinates>
            }
            
            class DynamicObstacleManager {
                - List<DynamicObstacle> active_obstacles

                + SpawnRandomObstacle(): void
            }
        }
        
        package Output <<Frame>> {
            class Navmesh {

            }
            
            class Dynamic_BitMap {
            }
        }

        ' === LAYOUT HINTS ===
        Input -[hidden]down-> Core
        Core -[hidden]down-> Output

        ' === RELATIONSHIPS & MULTIPLICITY ===
        
        ' 1. Loading Map
        Input.Static_BitMap "1" ..> "1" Input.MapFile : <<Loads>>
        
        ' 2. NavMesh Generation
        Core.NavMeshGenerator "1" ..> "1" Input.Static_BitMap : <<Uses>>
        Core.NavMeshGenerator "1" ..> "1" Output.Navmesh : <<Creates>>
        
        ' 3. Initialization
        Input.Static_BitMap "1" ..> "1" Output.Dynamic_BitMap : <<Initializes>>
        
        ' 4. The Obstacle Update Loop (The "Tick")
        ' One Manager controls Many Obstacles (Aggregation)
        Core.DynamicObstacleManager "1" o-- "0..*" Core.DynamicObstacle : Manages
        
        ' One Manager pushes updates to One Map
        Core.DynamicObstacleManager "1" ..> "1" Output.Dynamic_BitMap : <<Updates>>
        
        ' 5. Dependencies on Common Types
        Core.DynamicObstacleManager ..> Backend.Common.SystemConstants : <<Uses>>
    }
    namespace Layer2 {

    }
    namespace Layer3 { 

    }

}


@enduml
